update python 3.8 and add tinydb and active-progress

--- a/TestPython/Pipfile
+++ b/TestPython/Pipfile
@@ -8,6 +8,8 @@ verify_ssl = true
 [packages]
 numpy = "*"
 pypiwin32 = "*"
+alive-progress = "*"
+tinydb = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
